tests/pass/var.ct
def empty(i: bool): int {
    var x = 10;

    if i {
        x = x * 100;
    } else {
        x = 50;
    }

    return x;
}
