tests/fail/nested-refs.ct
def thing(): int {
    var i = 0;
    var x = &&i;
}